# find-large

./: .gitignore  AGENTS.md  README.md  TESTING.md  VERSIONS.md  project-overview.md  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: codeql.yml  renovate.yml
find_large/: __init__.py  __main__.py  cli.py  constants.py  core.py  formatting.py
find_large/dirs/: __init__.py  cli.py  core.py  scanner.py
find_large/files/: __init__.py  cli.py  core.py  scanner.py
find_large/videos/: __init__.py  cli.py  core.py  scanner.py
scripts/: local-ci.sh
tests/: __init__.py
tests/e2e/: test_dirs_cli.py  test_files_cli.py  test_videos_cli.py
tests/integration/: test_main_module.py
tests/unit/: __init__.py  test_cli.py  test_constants.py  test_core.py  test_dirs_core.py  test_files_core.py  test_formatting.py  test_main.py  test_scanners.py  test_videos_core.py
