[project]
name = "find-large"
version = "0.2.0"
description = "A tool to search for large files in a system"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "rich>=10.0.0",
  "click>=8.1.8",
]

[project.scripts]
find-large-files = "find_large.files.cli:main"
find-large-dirs = "find_large.dirs.cli:main"
find-large-vids = "find_large.videos.cli:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
lint = [
  "ruff>=0.6.9",
  "mdformat<0.8.0,>=0.7.16",
  "mdformat_frontmatter>=2.0.8",
  "mdformat-gfm>=1.0.0",
]

test = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
preview = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.ruff.lint]
select = [
  "F",      # Pyflakes
  "E", "W", # pycodestyle
  "N",      # pep8-naming
  "I",      # isort
  "D",      # pydocstyle
  "DOC",    # pydoclint
  "TID",    # tidy imports
  "UP",     # pyupgrade
  "FA",     # future-annotations
]
ignore = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
addopts = "--maxfail=1 -q --import-mode=append"

[tool.coverage.run]
omit = ["find_large/__main__.py"]

[tool.pdm.scripts]
lint = "ruff check ."
format = "ruff format ."
fix = "ruff check --fix ."

test = "pytest -q"
test-cov = "pytest --cov=. --cov-report=term-missing:skip-covered --cov-report=xml"
